Realizando commit 6:21 PM 7/9/2025

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	<script src='main.js'></script>
 </head>
 <body>
-	<H1>Este é um curso Git & Github</H1>
+	<H1>Este é um curso Git & Github - Etapa landing Page </H1>
 </body>
 </html>
