--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	<script src='main.js'></script>
 </head>
 <body>
-	<H1>Este é um curso Git & Github</H1>
+	<H1>My Name is Márcio</H1>
 </body>
 </html>
