--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<script src='main.js'></script>
 </head>
 <body>
-	<H1>My Name is Márcio</H1>
+	<center>
+		<H1>My Name is Márcio</H1>
+	</center>
 </body>
 </html>
