change tag from center to div

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<script src='main.js'></script>
 </head>
 <body>
-	<center>
+	<div>
 		<H1>My Name is Márcio</H1>
-	</center>
+	</div>
 </body>
 </html>
