--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 	<script src='main.js'></script>
 </head>
 <body>
-<<<<<<< HEAD
 	<div>
 		<H1>My Name full name is Márcio Tadeu da Silva</H1>
 	</div>
-=======
 	<h2>My last name is Tadeu</h2>
->>>>>>> feature-02
+
+	<p>
+		A description.
+	</p>
 </body>
 </html>
